add kubernetes deployment

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ app:
   kafka:
     binance-trade-topic: binance-trading-pairs
     boostrap-server: localhost:29092
+    enable-idempotence-config: true
 
 spring:
   data:
